<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateQuizActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/createQuizBackButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Quiz Details"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/createQuizUniqueName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/themedBlue"
                android:ems="10"
                android:hint="Quiz Name"
                android:maxLength="30"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:text="" />

            <EditText
                android:id="@+id/createQuizDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/themedBlue"
                android:ems="10"
                android:gravity="top|left"
                android:hint="Quiz Description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:singleLine="false"
                android:text="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Words"
                android:textAlignment="center"
                android:textSize="24sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/wordDefinitionList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

            <Button
                android:id="@+id/addMoreWordpairs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:background="@color/registerButton"
                android:radius="10dp"
                android:text="Add Word"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/textButton" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Random Incorrect Definitions"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="(These definitions are soley independent from the Words above)"
                android:textAlignment="viewStart"
                android:textStyle="italic" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/incorrectDefinitionList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_confirm_quiz_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:backgroundTint="@color/themedGreen"
        app:srcCompat="@drawable/ic_done_white_24dp" />

</RelativeLayout>