...
    <string name="msg_registration_fail">Invalid Entries</string>
    <string name="msg_logging_in">Logging in...</string>
    <string name="msg_cant_add_words">Reached maximum of 10 Words</string>
    <string name="msg_added_words">Added Words</string>
    <string name="msg_removed_word_success">Removed Word</string>
    <string name="msg_removed_word_failure">Remove Word Failed: Quiz needs at least one word</string>
    <string name="msg_author_cannot_take_quiz">You are the author of this quiz and cannot take it</string>
    <string name="error_quiz_in_use">Quiz with that name already exist</string>
    <string name="error_cannot_be_blanks">Cannot be left blank</string>
    <string name ="toast_delete_quiz_success">Successfully Deleted Quiz</string>

    // Dialog
    <string name="dialog_title_create_quiz">"Create Quiz?"</string>
    <string name="dialog_message_create_quiz">You are about to create your quiz. Do you want to proceed?</string>

    <string-array name="seniorityLevels">
...
